<resources>
    <string name="app_name">Toolbar</string>
    <string name="action_settings">Settings</string>
    <string name="add">añadir</string>
    <string name="search">buscar</string>
    <string name="edit">editar</string>
    <string name="delete">eliminar</string>

    <string-array name="filters">
        <item>Filtro1</item>
        <item>Filtro2</item>
        <item>Filtro3</item>
        <item>Filtro4</item>
        <item>Filtro5</item>
    </string-array>

    <string name="fragment1">Contenido de la pestaña 1</string>
    <string name="fragment2">Contenido de la pestaña 2</string>
    <string name="fragment3">Contenido de la pestaña 3</string>
    <string name="fragment4">Contenido de la pestaña 4</string>
    <string name="fragment5">Contenido de la pestaña 5</string>
    <string name="fragment6">Contenido de la pestaña 6</string>

    <string name="action_1">Acción 1</string>
    <string name="action_2">Acción 2</string>
    <string name="ab_bt_launch_card_view_toolbar">Card view toolbar</string>
    <string name="ab_bt_launch_animation_1">Animation 1</string>
    <string name="ab_bt_launch_animation_2">Animation 2</string>
    <string name="ab_bt_launch_animation_3">Animation 3</string>
    <string name="ab_bt_launch_animation_4">Animation 4</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
</resources>



